kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  rules:
  - host: solar-system-__NAMESPACE__.__INGRESS_IP__.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 3000
  tls:
  - hosts:
    - solar-system-__NAMESPACE__.__INGRESS_IP__.nip.io
    secretName: solar-system-tls
